Image alignment issue fixed

--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -4,3 +4,11 @@ background-position:center;
 background-size:cover;
 background-repeat: no-repeat;
 }
+
+div.container-fluid {
+    padding-right:0px;
+    padding-left:0px;
+    margin-right:auto;
+    margin-left:auto;
+    overflow: hidden;
+ }
